tests/specs/ecosystem/radix_ui_fork/react_dismissable_layer/0_0_7.test
radix-ui-fork/react-dismissable-layer/0.0.7
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'KeyboardEvent'.
   */ onEscapeKeyDown?: (event: KeyboardEvent) => void;
                                ~~~~~~~~~~~~~
    at file://<tmpdir>/src/DismissableLayer.tsx:15:33

TS2304 [ERROR]: Cannot find name 'PointerEvent'.
  originalEvent: PointerEvent;
                 ~~~~~~~~~~~~
    at file://<tmpdir>/src/DismissableLayer.tsx:39:18

TS2304 [ERROR]: Cannot find name 'FocusEvent'.
  originalEvent: FocusEvent;
                 ~~~~~~~~~~
    at file://<tmpdir>/src/DismissableLayer.tsx:42:18

Found 3 errors.

